Fix T57861: Object.ray_cast (and all RNA functions using "ob->runtime") broken in Blender 2.80

In fact, we can get valid depsgraph 99% of time from current context.

Still added extra optionnal depsgraph parameter just in case (and also
for future, when we might be handling much more temp depsgraphs).